kube/ingresses/ingress-nohost.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rails-demo-ing
spec:
  rules:
  - http:
      paths:
        - backend:
            serviceName: rails
            servicePort: 3000
          path: /
